Stub for print magazine content area

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,27 +8,6 @@
     <link rel="shortcut icon" type="image/x-icon" href="{{ site.url }}{{ site.baseurl }}/favicon.ico">
   </head>
   <body>
-    <!-- Header -->
-<!--
-    <header id="header">
-      <a href="{{ site.url }}{{ site.baseurl }}" class="logo">Baseball<strong>Ink</strong></a>
-      <nav>
-        <a href="#menu">Menu</a>
-      </nav>
-    </header>
--->
-    <!-- Nav -->
-<!--
-    <nav id="menu">
-      <ul class="links">
-        <li><a href="{{ site.url }}{{ site.baseurl }}">Home</a></li>
-        <li><a href="{{ site.url }}{{ site.baseurl }}/pages/avg-war.html">Average WAR</a></li>
-        <li><a href="{{ site.url }}{{ site.baseurl }}/pages/promotion-relegation.html">Promotion/Relegation</a></li>
-        <li><a href="{{ site.url }}{{ site.baseurl }}/pages/baseball-limericks.html">Baseball Limericks</a></li>
-        <li><a href="{{ site.url }}{{ site.baseurl }}/pages/about-us.html">About Us</a></li>
-      </ul>
-    </nav>
--->
     <table class="index-table-main" cellpadding="2" cellspacing="2">
       <tr>
         <td class="index-sidebar-left">
@@ -37,22 +16,11 @@
               <a href="{{ site.url }}{{ site.baseurl }}" title="Baseball Ink"><img src="{{ site.url }}{{ site.baseurl }}/assets/images/bi_logo_xsm.gif" width="200" height="71" alt="Baseball Ink" /></a>
               <h5><a href="{{ site.url }}{{ site.baseurl }}" title="Baseball Ink">Baseball The Way It Was Meant To Be</a></h5>
             </div>
-            <!-- <table width="244px" cellpadding="1" cellspacing="1">
-              <tr>
-                <td text-align="center" width="244px">
-                  <a href="{{ site.url }}{{ site.baseurl }}" title="Baseball Ink"><img src="{{ site.url }}{{ site.baseurl }}/assets/images/bi_logo_xsm.gif" width="200" height="71" alt="Baseball Ink" /></a>
-                </td>
-              </tr>
-              <tr>
-                <td text-align="center" width="244px">
-                  <h5><a href="{{ site.url }}{{ site.baseurl }}" title="Baseball Ink">Baseball The Way It Was Meant To Be</a></h5>
-                </td>
-              </tr>
-            </table> -->
             <ul>
               <li>
                 <ul>
                   <li><a href="{{ site.url }}{{ site.baseurl }}">Home</a></li>
+                  <li><a href="{{ site.url }}{{ site.baseurl }}/pages/magazine/magazine.html" title="Magazine">Magazine</a></li>
                   <li><a href="{{ site.url }}{{ site.baseurl }}/pages/avg-war/avg-war.html" title="Average WAR">Average WAR</a></li>
                   <li><a href="{{ site.url }}{{ site.baseurl }}/pages/pro-rel/promotion-relegation.html" title="Promotion/Relegation">Promotion/Relegation</a></li>
                   <li><a href="{{ site.url }}{{ site.baseurl }}/pages/limericks/baseball-limericks.html" title="Baseball Limericks">Baseball Limericks</a></li>
@@ -75,21 +43,12 @@
         </td>
       </tr>
     </table>
-    <!-- Footer -->
     <div class="clearer"></div>
     <div id="footer1">
     Copyright &copy; 2000-2019 <a href="{{ site.url }}{{ site.baseurl }}/pages/about-us.html">Baseball Ink</a>
       &nbsp;&nbsp;&#8226;&nbsp;&nbsp;<a href="{{ site.url }}{{ site.baseurl }}/pages/about-us.html">About Us</a>
       &nbsp;&nbsp;&#8226;&nbsp;&nbsp;<a href="https://github.com/jaypalexa/baseballink" title="GitHub" target="_blank">GitHub</a>
     </div>
-    <!-- Scripts -->
-<!--
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/skel.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
--->
   </body>
 </html>
 
