--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,15 +4,15 @@ div.aligncenter, .aligncenter {
   margin-right: auto;
 }
 
-.alignleft, .post img.alignleft, img.alignleft {
+.alignleft {
   float: left;
 }
 
-.alignright, .post img.alignright, img.alignright {
+.alignright {
   float: right;
 }
 
-a, .meta a, .storytitle a:link, .storytitle a {
+a {
   color: navy;
 }
 
@@ -24,273 +24,26 @@ a img {
   border: none;
 }
 
-#subtitle {
-  color: #999;
-  font-family: georgia, "times new roman", times, serif;
-  font-size: 125%;
-  font-weight: 700;
-  height: 40px;
-  margin-left: 275px;
-}
-
-a:hover, #menu ul ul li a:hover {
-  text-decoration: underline;
-}
-
-abbr, acronym {
-  border-bottom: 1px dashed #999;
-  cursor: help;
-}
-
-span.caps, abbr, acronym, ol#comments li p, .meta, #commentlist li ul {
-  font-size: 90%;
-}
-
-span.caps, abbr, acronym {
-  letter-spacing: .07em;
-}
-
-blockquote {
-  border: 1px dashed #999;
-  font-family: "courier new";
-  margin-left: 1.5em;
-}
-
-blockquote p {
-  font-family: "courier new";
-  font-size: 12px;
-}
-
-blockquote, #comments-post, .post {
-  padding: 5px;
-}
-
-.feedback, li {
-  font-family: georgia, "times new roman", times, serif;
-  font-size: 14px;
-  line-height: 140%;
-}
-
-p {
-  font-family: georgia, "times new roman", times, serif;
-  font-size: 16px;
-  line-height: 140%;
-}
-
 body {
   background: no-repeat scroll top left;
   font-family: georgia, "times new roman", times, serif;
   font-size: 13px;
 }
 
-body, h3, h5 a, #header, #header a, #menu input#s, #menu ul, #menu ul li, #menu ul ul li a:link, #menu ul ul li a {
-  color: #000;
-}
-
-h1 {
-  font-family: georgia, "times new roman", times, serif;
-  font-size: 18px;
-  font-weight: 700;
-}
-
-h2 {
-  font-family: georgia, "times new roman", times, serif;
-  font-size: 125%;
-  font-weight: 700;
-}
-
-h3, .meta a, .meta, #menu ul li, #menu ul ul li {
-  font-family: georgia, "times new roman", times, serif;
-}
-
-#menu ul li {
-  font-size: 13px;
-}
-
-h3, #menu ul li {
-  margin-top: 10px;
-}
-
-h3 {
-  font-size: 100%;
-  margin-bottom: 0;
-}
-
-h4 {
-  font-family: georgia, "times new roman", times, serif;
-  font-size: 90%;
-  margin-bottom: 0;
-  margin-top: 10px;
-}
-
-h5 {
-  font-family: georgia, "times new roman", times, serif;
-  font-size: 85%;
-  margin-bottom: 0;
-  margin-top: 10px;
-}
-
-ul.post-meta, .meta ul {
-  list-style: none;
-}
-
-ul.post-meta span.post-meta-key, .divider, .post a, #menu ul, #menu ul li {
-  font-weight: 700;
-}
-
-.clearer, .feedback {
+.clearer {
   clear: both;
 }
 
-.divider {
-  color: silver;
-  font-size: 120%;
-  text-align: center;
-}
-
-.feedback {
-  color: #CCC;
-  margin-bottom: 20px;
-}
-
-.feedback, #menu ul ul {
-  text-align: left;
-}
-
-#comments-post, .post {
-  margin: 5px;
-}
-
-ul.post-meta li, .meta li, .meta ul, .post img.alignleft, img.alignleft, .post img.alignright, img.alignright {
-  display: inline;
-}
-
-.meta a, .meta, #menu ul ul, #menu ul ul li {
-  font-weight: 400;
-}
-
-.meta a, .meta, #menu ul ul li {
-  letter-spacing: 0;
-}
-
-#commentform textarea, #commentform #url, #commentform #email, #commentform #author, #menu input#s {
-  background: #EEE;
-  border: 1px solid #999;
-}
-
-#commentform textarea, #commentform #url, #commentform #email, #commentform #author {
-  padding: 3px;
-}
-
-#commentform textarea {
-  width: 100%;
-}
-
-#commentlist li ul {
-  border-left: 1px solid #999;
-}
-
-#commentlist li ul, #menu ul, #menu ul ul {
-  list-style-type: none;
-}
-
-#footer1 {
+.footer {
   border-top: 1px dotted silver;
-  color: gray;
-  font-size: 100%;
   margin-top: 5px;
   padding: 10px 5px;
 }
 
-#footer2 {
-  color: gray;
-  font-size: 75%;
-}
-
-#header {
-  font-family: georgia, "times new roman", times, serif;
-  font-size: 340%;
-  height: 65px;
-}
-
-#header, #subtitle {
-  background: transparent;
-  text-align: right;
-  vertical-align: middle;
-}
-
-#menu form {
-  margin: 0 0 0 13px;
-}
-
-#menu input#s {
-  width: 130px;
-}
-
-#menu ul {
-  padding-left: 3px;
-  text-transform: uppercase;
-}
-
-#menu ul ul {
-  font-variant: normal;
-}
-
-#menu ul ul li {
-  border: 0;
-  margin-top: 0;
-  padding-left: 12px;
-  text-transform: none;
-}
-
-#menu ul ul ul.children {
-  font-size: 142%;
+.menu {
+  border-right: 2px solid silver;
   padding-left: 4px;
-}
-
-#wrapper {
-  background: #FFF no-repeat scroll top left;
-  margin: 10px auto;
-  width: 95%;
-}
-
-.post img.alignleft, img.alignleft {
-  margin: 0 2px 2px 0;
-  padding: 1px;
-}
-
-.post img.alignright, img.alignright {
-  margin: 0 0 2px 2px;
-  padding: 1px;
-}
-
-/* --- BREADCRUMBS -- */
-
-ul.breadcrumb {
-  padding: 10px 16px;
-  list-style: none;
-  background-color: #eee;
-}
-
-ul.breadcrumb li {
-  display: inline;
-  font-size: 14px;
-}
-
-ul.breadcrumb li+li:before {
-  padding: 8px;
-  color: black;
-  content: "/\00a0";
-}
-
-ul.breadcrumb li a {
-  color: #0275d8;
-  text-decoration: none;
-}
-
-ul.breadcrumb li a:hover {
-  color: #01447e;
-  text-decoration: underline;
+  padding-right: 4px;
 }
 
 /* --- INDEX --- */
