Initial About Page fixes, styling tweaks

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <section>
-      <div class="columns">
+      <div class="columns index-main">
         <div class="column is-one-quarter menu">
           <div class="index-masthead">
               <a href="{{ site.url }}{{ site.baseurl }}" title="Baseball Ink"><img src="{{ site.url }}{{ site.baseurl }}/assets/images/bi_logo_xsm.gif" width="200" height="71" alt="Baseball Ink" /></a>
