--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,11 +34,18 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: bolder;
+  padding-top: 6px;
 }
 
 h1 {
   font-size: 150%;
-  padding-top: 6px;
+}
+
+.about-us-contributor {
+  display: inline-block;
+  height: 50px;
+  line-height: 50px;
+  padding: 6px;
 }
 
 .breadcrumb {
@@ -54,18 +61,6 @@ h1 {
   padding: 2rem 1.5rem 2rem;
 }
 
-.menu {
-  border-right: 2px solid silver;
-  padding-left: 24px;
-  }
-
-/* --- INDEX --- */
-
-.index-cell-content {
-  vertical-align: top;
-  width: 625px;
-}
-
 .index-main .columns {
   min-height: 600px
 }
@@ -78,25 +73,13 @@ h1 {
 
 .index-masthead .tagline {
   display: block;
-  font-size: smaller;
 }
 
-.index-sidebar-left {
-  vertical-align: top;
-  width: 250px;
+.index-menu {
+  border-right: 2px solid silver;
+  padding-left: 24px;
 }
 
-.index-sidebar-right {
-  text-align: right;
-  vertical-align: top;
-  width: 125px;
-}
-
-.index-table-main {
-  width: 1000px;
-}
-
-.index-vertical-bar {
-  background-color: #C0C0C0;
-  width: 0px;
+.storycontent p {
+  margin-bottom: 6px;
 }
