--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -96,8 +96,9 @@ h1 {
   text-align:center;  
 }
 
-.avg-war-players {
+.avg-war-players table, th, td {
   border: 1px solid black;
+  border-collapse: collapse;
   font-family: Arial;
   font-size: 8pt;
 }
@@ -110,8 +111,12 @@ h1 {
   clear: both;
 }
 
+.column {
+  padding-left: 2rem;
+}
+
 .footer {
-  margin-top: 1rem;
+  margin-top: 12px;
   padding: 2rem 1.5rem 2rem;
 }
 
@@ -131,7 +136,6 @@ h1 {
 
 .index-menu {
   border-right: 2px solid silver;
-  padding-left: 24px;
 }
 
 .storycontent p {
