--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,9 +13,10 @@
       <div class="columns index-main">
         <div class="column is-one-quarter index-menu">
           <div class="index-masthead">
-              <a href="{{ site.url }}{{ site.baseurl }}" title="Baseball Ink"><img src="{{ site.url }}{{ site.baseurl }}/assets/images/bi_logo_xsm.gif" width="200" height="71" alt="Baseball Ink" /></a>
-              <a href="{{ site.url }}{{ site.baseurl }}" title="Baseball Ink" class="tagline">Baseball The Way It Was Meant To Be</a>
-            </div>
+            <a href="{{ site.url }}{{ site.baseurl }}" title="Baseball Ink"><img src="{{ site.url }}{{ site.baseurl }}/assets/images/bi_logo_xsm.gif" width="200" height="71" alt="Baseball Ink" /></a>
+            <a href="{{ site.url }}{{ site.baseurl }}" title="Baseball Ink" class="tagline">Baseball The Way It Was Meant To Be</a>
+          </div>
+          <div class="index-menu-items">
             <ul>
               <li><a href="{{ site.url }}{{ site.baseurl }}">Home</a></li>
               <li><a href="{{ site.url }}{{ site.baseurl }}/pages/magazine/magazine.html" title="Magazine">Magazine</a></li>
@@ -24,6 +25,7 @@
               <li><a href="{{ site.url }}{{ site.baseurl }}/pages/limericks/baseball-limericks.html" title="Baseball Limericks">Baseball Limericks</a></li>
               <li><a href="{{ site.url }}{{ site.baseurl }}/pages/about-us.html" title="About Baseball Ink">About Baseball Ink</a></li>
             </ul>
+          </div>
         </div>
         <div class="column is-three-quarters container" id="content" >
           {{ content }}
