--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,6 +28,22 @@ a img {
   border: none;
 }
 
+blockquote {
+  position: relative;
+  padding-left: 1em;
+  border-left: 0.2em solid lighten(#000000, 40%);
+}
+
+blockquote::before {
+  content: '\201C';
+  color: lighten(#000000, 40%);
+}
+
+blockquote::after {
+  content: '\201D';
+  color: lighten(#000000, 40%);
+}
+
 body {
   font-family: Georgia, "Times New Roman", Times, Serif;
 }
