Trying magazine issues in side menu

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,10 @@
             <ul>
               <li><a href="{{ site.url }}{{ site.baseurl }}">Home</a></li>
               <li><a href="{{ site.url }}{{ site.baseurl }}/pages/magazine/magazine.html" title="Magazine">Magazine</a></li>
+              <ul class="font-smaller">
+                <li><a href="{{ site.url }}{{ site.baseurl }}/pages/magazine/vol_1_no_1/bi_vol_1_no_1_home.html">Vol. 1, No. 1 - June 2000</a></li>
+                <li><a href="{{ site.url }}{{ site.baseurl }}/pages/magazine/vol_1_no_2/bi_vol_1_no_2_home.html">Vol. 1, No. 2 - September 2000</a></li>
+              </ul>
               <li><a href="{{ site.url }}{{ site.baseurl }}/pages/avg-war/avg-war.html" title="Average WAR">Average WAR</a></li>
               <li><a href="{{ site.url }}{{ site.baseurl }}/pages/pro-rel/promotion-relegation.html" title="Promotion/Relegation">Promotion/Relegation</a></li>
               <li><a href="{{ site.url }}{{ site.baseurl }}/pages/limericks/baseball-limericks.html" title="Baseball Limericks">Baseball Limericks</a></li>
@@ -35,7 +39,7 @@
     <div class="clearer"></div>
     <footer class="footer">
       <div class="content has-text-centered">
-        Copyright &copy; 2000-2019 <a href="{{ site.url }}{{ site.baseurl }}/pages/about-us.html">Baseball Ink</a>
+        Copyright &copy; 2000-2019 <a href="{{ site.url }}{{ site.baseurl }}/index.html">Baseball Ink</a>
         &nbsp;&nbsp;&#8226;&nbsp;&nbsp;<a href="{{ site.url }}{{ site.baseurl }}/pages/about-us.html">About Us</a>
         &nbsp;&nbsp;&#8226;&nbsp;&nbsp;<a href="https://github.com/jaypalexa/baseballink" title="GitHub" target="_blank">GitHub</a>
       </div>
