--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -118,7 +118,7 @@ h1 {
 
 .column {
   padding-left: 2rem;
-  padding-right: .5rem;
+  padding-right: 1rem;
 }
 
 .font-bolder {
@@ -129,9 +129,13 @@ h1 {
   font-size: larger;
 }
 
+.font-smaller {
+  font-size: smaller;
+}
+
 .footer {
   margin-top: 12px;
-  padding: 2rem 1.5rem 2rem;
+  padding: 1rem 1.5rem 1rem;
 }
 
 .index-main {
