--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
             <ul>
               <li><a href="{{ site.url }}{{ site.baseurl }}">Home</a></li>
               <li><a href="{{ site.url }}{{ site.baseurl }}/pages/magazine/magazine.html" title="Magazine">Magazine</a></li>
-              <ul class="font-smaller">
+              <ul class="font-smaller nested-list">
                 <li><a href="{{ site.url }}{{ site.baseurl }}/pages/magazine/vol_1_no_1/bi_vol_1_no_1_home.html">Vol. 1, No. 1 - June 2000</a></li>
                 <li><a href="{{ site.url }}{{ site.baseurl }}/pages/magazine/vol_1_no_2/bi_vol_1_no_2_home.html">Vol. 1, No. 2 - September 2000</a></li>
               </ul>
@@ -38,10 +38,10 @@
     </section>
     <div class="clearer"></div>
     <footer class="footer">
-      <div class="content has-text-centered">
-        Copyright &copy; 2000-2019 <a href="{{ site.url }}{{ site.baseurl }}/index.html">Baseball Ink</a>
-        &nbsp;&nbsp;&#8226;&nbsp;&nbsp;<a href="{{ site.url }}{{ site.baseurl }}/pages/about-us.html">About Us</a>
-        &nbsp;&nbsp;&#8226;&nbsp;&nbsp;<a href="https://github.com/jaypalexa/baseballink" title="GitHub" target="_blank">GitHub</a>
+      <div class="content has-text-centered font-smaller">
+        Copyright &copy; 2000-2019 Baseball Ink
+        &#8226; <a href="{{ site.url }}{{ site.baseurl }}/pages/about-us.html">About Baseball Ink</a>
+        &#8226; <a href="https://github.com/jaypalexa/baseballink" title="GitHub" target="_blank">GitHub</a>
       </div>
     </footer>
   </body>
