--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,20 +11,19 @@
   <body>
     <nav class="navbar" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
-        <a class="navbar-item" href="{{ site.url }}{{ site.baseurl }}">
-          <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
+        <!-- <a class="navbar-item" href="{{ site.url }}{{ site.baseurl }}">
           <img src="{{ site.url }}{{ site.baseurl }}/assets/images/bi_logo_xsm.gif" width="200" height="71" alt="Baseball Ink" />
           <span>Baseball The Way It Was Meant To Be</span>
-        </a>
+        </a> -->
     
-        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBaseballInk">
+        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navMenu">
           <span aria-hidden="true"></span>
           <span aria-hidden="true"></span>
           <span aria-hidden="true"></span>
         </a>
       </div>
       
-      <div id="navbarBaseballInk" class="navbar-menu">
+      <div id="navMenu" class="navbar-menu">
         <div class="navbar-start">
           <a class="navbar-item" href="{{ site.url }}{{ site.baseurl }}">
             Home
@@ -64,20 +63,6 @@
             <a href="{{ site.url }}{{ site.baseurl }}" title="Baseball Ink"><img src="{{ site.url }}{{ site.baseurl }}/assets/images/bi_logo_xsm.gif" width="200" height="71" alt="Baseball Ink" /></a>
             <a href="{{ site.url }}{{ site.baseurl }}" title="Baseball Ink" class="tagline">Baseball The Way It Was Meant To Be</a>
           </div>
-          <div class="index-menu-items">
-            <ul>
-              <li><a href="{{ site.url }}{{ site.baseurl }}">Home</a></li>
-              <li><a href="{{ site.url }}{{ site.baseurl }}/pages/magazine/magazine.html" title="Magazine">Magazine</a></li>
-              <ul class="font-smaller nested-list">
-                <li><a href="{{ site.url }}{{ site.baseurl }}/pages/magazine/vol_1_no_1/bi_vol_1_no_1_home.html">Vol. 1, No. 1 - June 2000</a></li>
-                <li><a href="{{ site.url }}{{ site.baseurl }}/pages/magazine/vol_1_no_2/bi_vol_1_no_2_home.html">Vol. 1, No. 2 - September 2000</a></li>
-              </ul>
-              <li><a href="{{ site.url }}{{ site.baseurl }}/pages/avg-war/avg-war.html" title="Average WAR">Average WAR</a></li>
-              <li><a href="{{ site.url }}{{ site.baseurl }}/pages/pro-rel/promotion-relegation.html" title="Promotion/Relegation">Promotion/Relegation</a></li>
-              <li><a href="{{ site.url }}{{ site.baseurl }}/pages/limericks/baseball-limericks.html" title="Baseball Limericks">Baseball Limericks</a></li>
-              <li><a href="{{ site.url }}{{ site.baseurl }}/pages/about-us.html" title="About Baseball Ink">About Baseball Ink</a></li>
-            </ul>
-          </div>
         </div>
         <div class="column is-three-quarters container" id="content" >
           {{ content }}
@@ -93,5 +78,6 @@
       </div>
     </footer>
   </body>
+  <script async type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/scripts/bulma.js"></script>
 </html>
 
