Attempting to make footer sticky

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,7 +70,7 @@
       </div>
     </section>
     <div class="clearer"></div>
-    <footer class="footer">
+    <footer class="footer is-fixed-bottom">
       <div class="content has-text-centered font-smaller">
         Copyright &copy; 2000-2019 Baseball Ink
         &#8226; <a href="{{ site.url }}{{ site.baseurl }}/pages/about-us.html">About Baseball Ink</a>
