--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -138,9 +138,9 @@ h1 {
   padding: 1rem 1.5rem 1rem;
 }
 
-.index-main {
+/* .index-main {
   min-height: 600px
-}
+} */
 
 .index-masthead {
   font-size: smaller;
