--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -54,11 +54,11 @@ h1 {
 }
 
 .avg-war [type="text"] { 
-  background:white; 
-  color:black; 
-  font-family:Tahoma,Arial; 
-  text-align:center;  
-  font-weight:900;
+  background: white; 
+  color: black; 
+  font-family: Tahoma, Arial; 
+  text-align: center;  
+  font-weight: 900;
 }
 
 .avg-war table {
@@ -66,39 +66,39 @@ h1 {
 }
 
 .avg-war .battingDark { 
-  background:#336600; 
-  color:white; 
-  font-family:Tahoma,Arial; 
-  font-size:small;
-  font-weight:900;
-  text-align:center;  
+  background: #336600; 
+  color: white; 
+  font-family: Tahoma,Arial; 
+  font-size: small;
+  font-weight: 900;
+  text-align: center;  
 }
 
 .avg-war .battingLight { 
-  background:#339966; 
-  color:white; 
-  font-family:Tahoma,Arial; 
-  font-size:small;
-  font-weight:900;
-  text-align:center;  
+  background: #339966; 
+  color: white; 
+  font-family: Tahoma, Arial; 
+  font-size: small;
+  font-weight: 900;
+  text-align: center;  
 }
 
 .avg-war .pitchingDark { 
-  background:#336600; 
-  color:white; 
-  font-family:Tahoma,Arial; 
-  font-size:small;
-  font-weight:900;
-  text-align:center;  
+  background: #336600; 
+  color: white; 
+  font-family: Tahoma, Arial; 
+  font-size: small;
+  font-weight: 900;
+  text-align: center;  
 }
 
 .avg-war .pitchingLight { 
-  background:#339966; 
-  color:white; 
-  font-family:Tahoma,Arial; 
-  font-size:small;
-  font-weight:900;
-  text-align:center;  
+  background: #339966; 
+  color: white; 
+  font-family: Tahoma, Arial; 
+  font-size: small;
+  font-weight: 900;
+  text-align: center;  
 }
 
 .avg-war-players table, th, td {
@@ -112,35 +112,17 @@ h1 {
   margin-top: .5rem;
 }
 
-.clearer {
-  clear: both;
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  .breadcrumb {
+    display: none;
+  }
 }
 
 .column {
   padding-left: 2rem;
   padding-right: 1rem;
 }
-
-.font-bolder {
-  font-weight: bolder;
-}
-
-.font-larger {
-  font-size: larger;
-}
-
-.font-smaller {
-  font-size: smaller;
-}
-
-.footer {
-  margin-top: 12px;
-  padding: 1rem 1.5rem 1rem;
-}
-
-/* .index-main {
-  min-height: 600px
-} */
 
 .index-masthead {
   font-size: smaller;
