--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,7 +84,7 @@
     </nav>
     <section>
       <div class="columns index-main">
-        <div class="column is-one-quarter index-menu">
+        <div class="column is-one-quarter index-menu is-hidden-mobile">
           <div class="index-masthead">
             <a href="{{ site.url }}{{ site.baseurl }}" title="Baseball Ink"><img src="{{ site.url }}{{ site.baseurl }}/assets/images/bi_logo_xsm.gif" width="200" height="71" alt="Baseball Ink" /></a>
             <a href="{{ site.url }}{{ site.baseurl }}" title="Baseball Ink" class="tagline">Baseball The Way It Was Meant To Be</a>
