Removed experimental toggle onClick function

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
           <span>Baseball The Way It Was Meant To Be</span>
         </a> -->
     
-        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navMenu" onclick="toggleBurger()">
+        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navMenu">
           <span aria-hidden="true"></span>
           <span aria-hidden="true"></span>
           <span aria-hidden="true"></span>
@@ -84,10 +84,10 @@
     </nav>
     <section>
       <div class="columns index-main">
-        <div class="column is-one-quarter index-menu is-hidden-mobile">
+        <div class="column is-one-quarter index-menu">
           <div class="index-masthead">
             <a href="{{ site.url }}{{ site.baseurl }}" title="Baseball Ink"><img src="{{ site.url }}{{ site.baseurl }}/assets/images/bi_logo_xsm.gif" width="200" height="71" alt="Baseball Ink" /></a>
-            <a href="{{ site.url }}{{ site.baseurl }}" title="Baseball Ink" class="tagline">Baseball The Way It Was Meant To Be</a>
+            <p class="is-size-4">Baseball The Way It Was Meant To Be</p>
           </div>
         </div>
         <div class="column is-three-quarters container" id="content" >
