--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
           </a>
     
           <div class="navbar-item has-dropdown is-hoverable">
-            <a class="navbar-link" href="{{ site.url }}{{ site.baseurl }}/pages/magazine/magazine.html">
+            <a class="navbar-link">
               Magazine
             </a>
             <div class="navbar-dropdown">
@@ -66,7 +66,7 @@
           </a>
     
           <div class="navbar-item has-dropdown is-hoverable">
-            <a class="navbar-link" href="{{ site.url }}{{ site.baseurl }}/pages/magazine/magazine.html">
+            <a class="navbar-link">
               More
             </a>
             <div class="navbar-dropdown">
@@ -96,6 +96,6 @@
       </div>
     </section>
   </body>
-  <script async type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/scripts/bulma.js"></script>
+  <script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/scripts/bulma.js"></script>
 </html>
 
